# solana-launchpad

./: .env.example  .gitignore  Anchor.toml  DEPLOYMENT_GUIDE.md  DEVNET_SETUP.md  Dockerfile.build  README.md  SETUP_SUMMARY.md  TESTING_CHECKLIST.md  TESTNET_SETUP.md  WALLET_DEVNET_SETUP.md  env.local  env.testnet  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: deploy-testnet.yml
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/explore/: page.tsx
app/src/components/: BondingCurveChart.tsx  GraduationProgress.tsx  LaunchpadCard.tsx  Navbar.tsx  NetworkIndicator.tsx  SimpleLaunchpadCard.tsx  WalletProvider.tsx
app/src/config/: meteora.ts  networks.ts
app/token/[id]/: page.tsx
programs/launchpad/: Cargo.toml
programs/launchpad/src/: error.rs  lib.rs  state.rs  utils.rs
programs/launchpad/src/instructions/: buy_on_curve.rs  create_launchpad.rs  graduate_launchpad.rs  initialize_global_state.rs  mod.rs  pause_launchpad.rs  sell_to_curve.rs  withdraw_fees.rs
scripts/: build-simple.sh  build-with-docker.sh  deploy-devnet-real.sh  deploy-devnet.sh  deploy-testnet-simple.sh  deploy-testnet.sh  deploy.sh  export-wallet-key.sh  get-private-key.sh  get-testnet-sol-multiple.sh  get-testnet-sol.sh  setup-env.sh
sdk/src/: index.ts  launchpad-sdk.ts  types.ts  utils.ts
tests/: integration.test.ts
