[package]
name = "launchpad"
version = "0.1.0"
description = "Solana token launchpad with bonding curves"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
anchor-client = "0.31.1"